@@ -31,8 +31,8 @@ import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
+import static org.elasticsearch.env.NodeEnvironment.SEARCHABLE_SHARED_CACHE_FILE;
 import static org.elasticsearch.index.query.QueryBuilders.matchAllQuery;
 import static org.elasticsearch.test.NodeRoles.nonDataNode;
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertHitCount;
@@ -136,7 +136,16 @@ public class NodeEnvironmentIT extends ESIntegTestCase {
         );
         assertThat(
             illegalStateException.getMessage(),
-            allOf(startsWith("cannot upgrade a node from version ["), endsWith("] directly to version [" + Version.CURRENT + "]"))
+            allOf(
+                startsWith("cannot upgrade a node from version ["),
+                endsWith(
+                    "] directly to version ["
+                        + Version.CURRENT
+                        + "], upgrade to version ["
+                        + Version.CURRENT.minimumCompatibilityVersion()
+                        + "] first."
+                )
+            )
         );
     }
 
@@ -150,10 +159,7 @@ public class NodeEnvironmentIT extends ESIntegTestCase {
         internalCluster().stopRandomDataNode();
 
         // simulate older data path layout by moving data under "nodes/0" folder
-        final List<Path> dataPaths = Environment.PATH_DATA_SETTING.get(dataPathSettings)
-            .stream()
-            .map(PathUtils::get)
-            .collect(Collectors.toList());
+        final List<Path> dataPaths = Environment.PATH_DATA_SETTING.get(dataPathSettings).stream().map(PathUtils::get).toList();
         dataPaths.forEach(path -> {
             final Path nodesPath = path.resolve("nodes");
             final Path targetPath = nodesPath.resolve("0");
@@ -209,6 +215,13 @@ public class NodeEnvironmentIT extends ESIntegTestCase {
                 assertThat(ise.getMessage(), containsString("target folder already exists during data folder upgrade"));
                 Files.delete(conflictingFolder);
             }
+        }
+
+        // simulate a frozen node with a shared cache file
+        if (rarely()) {
+            final Path randomDataPath = randomFrom(dataPaths);
+            final Path sharedCache = randomDataPath.resolve("nodes").resolve("0").resolve(SEARCHABLE_SHARED_CACHE_FILE);
+            Files.createFile(sharedCache);
         }
 
         // check that upgrade works
