@@ -38,7 +38,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 public class TransportGetAliasesAction extends TransportMasterNodeReadAction<GetAliasesRequest, GetAliasesResponse> {
     private static final DeprecationLogger deprecationLogger = DeprecationLogger.getLogger(TransportGetAliasesAction.class);
@@ -144,7 +143,7 @@ public class TransportGetAliasesAction extends TransportMasterNodeReadAction<Get
                 .stream()
                 .filter(alias -> alias.getDataStreams().contains(requestedDataStream))
                 .filter(alias -> noAliasesSpecified || Regex.simpleMatch(request.aliases(), alias.getName()))
-                .collect(Collectors.toList());
+                .toList();
             if (aliases.isEmpty() == false) {
                 result.put(requestedDataStream, aliases);
             }
@@ -193,51 +192,7 @@ public class TransportGetAliasesAction extends TransportMasterNodeReadAction<Get
             );
         }
         if (netNewSystemIndices.isEmpty() == false) {
-            throw systemIndices.netNewSystemIndexAccessException(threadContext, netNewSystemIndices);
-        }
-        checkSystemAliasAccess(request, systemIndices, systemIndexAccessLevel, threadContext);
-    }
-
-    private static void checkSystemAliasAccess(
-        GetAliasesRequest request,
-        SystemIndices systemIndices,
-        SystemIndexAccessLevel systemIndexAccessLevel,
-        ThreadContext threadContext
-    ) {
-        final Predicate<String> systemIndexAccessAllowPredicate;
-        if (systemIndexAccessLevel == SystemIndexAccessLevel.NONE) {
-            systemIndexAccessAllowPredicate = name -> true;
-        } else if (systemIndexAccessLevel == SystemIndexAccessLevel.RESTRICTED) {
-            systemIndexAccessAllowPredicate = systemIndices.getProductSystemIndexNamePredicate(threadContext).negate();
-        } else {
-            throw new IllegalArgumentException("Unexpected system index access level: " + systemIndexAccessLevel);
-        }
-
-        final List<String> systemAliases = new ArrayList<>();
-        final List<String> netNewSystemAliases = new ArrayList<>();
-        for (String alias : request.aliases()) {
-            if (systemIndices.isSystemName(alias)) {
-                if (systemIndexAccessAllowPredicate.test(alias)) {
-                    if (systemIndices.isNetNewSystemIndex(alias)) {
-                        netNewSystemAliases.add(alias);
-                    } else {
-                        systemAliases.add(alias);
-                    }
-                }
-            }
-        }
-
-        if (systemAliases.isEmpty() == false) {
-            deprecationLogger.warn(
-                DeprecationCategory.API,
-                "open_system_alias_access",
-                "this request accesses aliases with names reserved for system indices: {}, but in a future major version, direct "
-                    + "access to system indices and their aliases will not be allowed",
-                systemAliases
-            );
-        }
-        if (netNewSystemAliases.isEmpty() == false) {
-            throw systemIndices.netNewSystemIndexAccessException(threadContext, netNewSystemAliases);
+            throw SystemIndices.netNewSystemIndexAccessException(threadContext, netNewSystemIndices);
         }
     }
 }
