@@ -9,8 +9,8 @@ package org.elasticsearch.cluster.coordination;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.cluster.coordination.CoordinationMetadata.VotingConfiguration;
+import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Setting.Property;
@@ -123,6 +123,30 @@ public class ClusterBootstrapService {
             .anyMatch(s -> s.exists(settings));
     }
 
+    void logBootstrapState(Metadata metadata) {
+        if (metadata.clusterUUIDCommitted()) {
+            final var clusterUUID = metadata.clusterUUID();
+            if (bootstrapRequirements.isEmpty()) {
+                logger.info("this node is locked into cluster UUID [{}] and will not attempt further cluster bootstrapping", clusterUUID);
+            } else {
+                logger.warn(
+                    """
+                        this node is locked into cluster UUID [{}] but [{}] is set to {}; \
+                        remove this setting to avoid possible data loss caused by subsequent cluster bootstrap attempts""",
+                    clusterUUID,
+                    INITIAL_MASTER_NODES_SETTING.getKey(),
+                    bootstrapRequirements
+                );
+            }
+        } else {
+            logger.info(
+                "this node has not joined a bootstrapped cluster yet; [{}] is set to {}",
+                INITIAL_MASTER_NODES_SETTING.getKey(),
+                bootstrapRequirements
+            );
+        }
+    }
+
     void onFoundPeersUpdated() {
         final Set<DiscoveryNode> nodes = getDiscoveredNodes();
         if (bootstrappingPermitted.get()
@@ -225,7 +249,7 @@ public class ClusterBootstrapService {
         try {
             votingConfigurationConsumer.accept(votingConfiguration);
         } catch (Exception e) {
-            logger.warn(new ParameterizedMessage("exception when bootstrapping with {}, rescheduling", votingConfiguration), e);
+            logger.warn(() -> "exception when bootstrapping with " + votingConfiguration + ", rescheduling", e);
             transportService.getThreadPool().scheduleUnlessShuttingDown(TimeValue.timeValueSeconds(10), Names.GENERIC, new Runnable() {
                 @Override
                 public void run() {
@@ -268,7 +292,7 @@ public class ClusterBootstrapService {
                         "node ["
                             + matchingNode
                             + "] matches multiple requirements: "
-                            + bootstrapRequirements.stream().filter(r -> matchesRequirement(matchingNode, r)).collect(Collectors.toList())
+                            + bootstrapRequirements.stream().filter(r -> matchesRequirement(matchingNode, r)).toList()
                     );
                 }
             }
