@@ -29,7 +29,7 @@ import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.transport.TransportAddress;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.core.Booleans;
-import org.elasticsearch.core.internal.io.IOUtils;
+import org.elasticsearch.core.IOUtils;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.xcontent.XContentBuilder;
 
@@ -45,7 +45,6 @@ import java.util.Set;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.elasticsearch.common.settings.Setting.intSetting;
@@ -160,7 +159,7 @@ public class SniffConnectionStrategy extends RemoteConnectionStrategy {
             configuredSeedNodes,
             configuredSeedNodes.stream()
                 .map(seedAddress -> (Supplier<DiscoveryNode>) () -> resolveSeedNode(clusterAlias, seedAddress, proxyAddress))
-                .collect(Collectors.toList())
+                .toList()
         );
     }
 
@@ -243,7 +242,7 @@ public class SniffConnectionStrategy extends RemoteConnectionStrategy {
                         return;
                     }
                 }
-                logger.warn(new ParameterizedMessage("fetching nodes from external cluster [{}] failed", clusterAlias), e);
+                logger.warn(() -> "fetching nodes from external cluster [" + clusterAlias + "] failed", e);
                 listener.onFailure(e);
             };
 
@@ -367,7 +366,7 @@ public class SniffConnectionStrategy extends RemoteConnectionStrategy {
 
         @Override
         public void handleResponse(ClusterStateResponse response) {
-            handleNodes(response.getState().nodes().getNodes().valuesIt());
+            handleNodes(response.getState().nodes().getNodes().values().iterator());
         }
 
         private void handleNodes(Iterator<DiscoveryNode> nodesIter) {
@@ -427,7 +426,7 @@ public class SniffConnectionStrategy extends RemoteConnectionStrategy {
 
         @Override
         public void handleException(TransportException exp) {
-            logger.warn(new ParameterizedMessage("fetching nodes from external cluster {} failed", clusterAlias), exp);
+            logger.warn(() -> "fetching nodes from external cluster " + clusterAlias + " failed", exp);
             try {
                 IOUtils.closeWhileHandlingException(connection);
             } finally {
@@ -513,7 +512,7 @@ public class SniffConnectionStrategy extends RemoteConnectionStrategy {
         }
     }
 
-    private boolean seedsChanged(final List<String> oldSeedNodes, final List<String> newSeedNodes) {
+    private static boolean seedsChanged(final List<String> oldSeedNodes, final List<String> newSeedNodes) {
         if (oldSeedNodes.size() != newSeedNodes.size()) {
             return true;
         }
@@ -522,7 +521,7 @@ public class SniffConnectionStrategy extends RemoteConnectionStrategy {
         return oldSeeds.equals(newSeeds) == false;
     }
 
-    private boolean proxyChanged(String oldProxy, String newProxy) {
+    private static boolean proxyChanged(String oldProxy, String newProxy) {
         if (oldProxy == null || oldProxy.isEmpty()) {
             return (newProxy == null || newProxy.isEmpty()) == false;
         }
