@@ -8,7 +8,6 @@ package org.elasticsearch.xpack.watcher;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.ElasticsearchParseException;
 import org.elasticsearch.cluster.ClusterChangedEvent;
 import org.elasticsearch.cluster.ClusterState;
@@ -21,6 +20,7 @@ import org.elasticsearch.cluster.routing.Murmur3HashFunction;
 import org.elasticsearch.cluster.routing.RoutingNode;
 import org.elasticsearch.cluster.routing.ShardRouting;
 import org.elasticsearch.common.Strings;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.common.util.set.Sets;
 import org.elasticsearch.index.engine.Engine;
 import org.elasticsearch.index.shard.IndexingOperationListener;
@@ -41,7 +41,6 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -165,7 +164,7 @@ final class WatcherIndexingListener implements IndexingOperationListener, Cluste
     @Override
     public void postIndex(ShardId shardId, Engine.Index index, Exception ex) {
         if (isWatchDocument(shardId.getIndexName())) {
-            logger.debug(() -> new ParameterizedMessage("failed to add watch [{}] to trigger service", index.id()), ex);
+            logger.debug(() -> "failed to add watch [" + index.id() + "] to trigger service", ex);
         }
     }
 
@@ -222,7 +221,7 @@ final class WatcherIndexingListener implements IndexingOperationListener, Cluste
                     checkWatchIndexHasChanged(metadata, event);
                 }
             } catch (IllegalStateException e) {
-                logger.error("error loading watches index: [{}]", e.getMessage());
+                logger.error("error loading watches index", e);
                 configuration = INACTIVE;
             }
         }
@@ -331,21 +330,21 @@ final class WatcherIndexingListener implements IndexingOperationListener, Cluste
      *   data.put(ShardId(".watch", 0), new Tuple(1, 4))
      */
     Map<ShardId, ShardAllocationConfiguration> getLocalShardAllocationIds(List<ShardRouting> localShards, IndexRoutingTable routingTable) {
-        Map<ShardId, ShardAllocationConfiguration> data = new HashMap<>(localShards.size());
+        Map<ShardId, ShardAllocationConfiguration> data = Maps.newMapWithExpectedSize(localShards.size());
 
         for (ShardRouting shardRouting : localShards) {
             ShardId shardId = shardRouting.shardId();
 
             // find all allocation ids for this shard id in the cluster state
             List<String> allocationIds = routingTable.shard(shardId.getId())
-                .getActiveShards()
+                .activeShards()
                 .stream()
                 .map(ShardRouting::allocationId)
                 .map(AllocationId::getId)
-                .collect(Collectors.toList());
+                .sorted()
+                .toList();
 
             // sort the list so it is stable
-            Collections.sort(allocationIds);
 
             String allocationId = shardRouting.allocationId().getId();
             int idx = allocationIds.indexOf(allocationId);
